Add Docker Compose service orchestration
Integrate Docker Compose to manage and orchestrate quickstart
services. This update significantly refactors how services are
defined and started.

- Generate `docker-compose.yaml` files dynamically from service
  definitions.
- Update `ComposeBuilder` and `ProcessStarter` to leverage Docker
  Compose commands for service lifecycle management.
- Revamp registry persistence and DTOs (e.g., `ServiceExport`) to
  support the new Compose-centric service model.
- Introduce `LambdaExceptionHandler` for improved error handling.
- Update project dependencies and add `smartcommit-config.json`.